<resources>
    <string name="app_name">DarkPurple</string>
    <string name="simple_unknown">未知</string>
    <string name="simple_cancel">取消</string>
    <string name="simple_done">确定</string>
    <string name="simple_downloading">正在下载中</string>
    <string name="simple_download_completed">已成功下载文件</string>
    <string name="simple_download_failed">下载文件失败,请检查网络状态</string>
    <string name="simple_loading">正在读取中,请稍候</string>
    <string name="simple_uploading">正在上传中,请稍候</string>
    <string name="service_ok">音频服务连接成功</string>
    <string name="title_dialog_allmusic_more">对选择的音频进行操作</string>
    <string name="button_dialog_allmusic_delete">删除音频</string>
    <string name="button_dialog_allmusic_add">添加到现有播放列表</string>
    <string name="button_dialog_allmusic_cover">从网络获取封面图像</string>
    <string name="button_dialog_allmusic_upload">将歌曲上传至我的云</string>
    <string name="title_dialog_playlist_more">对选择的播放列表进行操作</string>
    <string name="request_permission_button">申请</string>
    <string name="button_dialog_playlist_delete">删除列表</string>
    <string name="button_dialog_playlist_detail">列表详情</string>
    <string name="message_waitForSelecting">请先完成添加播放列表</string>
    <string name="message_plzSelect">请单击选择需要添加的曲目</string>
    <string name="message_play_error">歌曲无法播放,可能文件已损坏</string>
    <string name="message_playlist_name_error">请输入有效的名称</string>
    <string name="message_playlist_name_existed">存在相同名称的播放列表</string>
    <string name="message_playlist_add_error_no_selecting">当前不是选择模式</string>
    <string name="message_playlist_add_error_existed">添加音频失败,可能存在同名音频</string>
    <string name="message_playlist_add_error_no_song">没有被选择的歌曲</string>
    <string name="message_playlist_add_done">正在添加播放列表…</string>
    <string name="message_playlist_add_done_item">成功添加音频</string>
    <string name="message_scan_result_empty">无歌曲</string>
    <string name="message_scan_result_done">已更新列表:D</string>
    <string name="message_song_deleted">音频已删除</string>
    <string name="message_song_delete_failed">音频删除失败，可能文件不存在</string>
    <string name="message_upload_offline">当前为离线模式,暂时无法使用</string>
    <string name="message_upload_started">音频正在后台上传中…</string>
    <string name="message_upload_busy">当请等待上一个上传任务完成后再执行</string>
    <string name="dialog_button_create">创建新的播放列表</string>
    <string name="dialog_button_add2">添加到现有播放列表</string>
    <string name="dialog_button_delete">删除音频</string>
    <string name="dialog_button_cover">从网络获取封面图像</string>
    <string name="dialog_button_upload">将歌曲上传至我的云</string>
    <string name="text_cloud_userText_head">当前账户:</string>
    <string name="text_cloud_offline">当前为离线模式，请先登录后再使用此功能</string>
    <string name="text_cloud_title">我的云储存音乐</string>
    <string name="part_playlist_count_head">曲目数:</string>
    <string name="part_playlist_count_end">首</string>
    <string name="message_playlist_play_failed">播放失败,此列表可能已损坏</string>
    <string name="message_playlist_loading">正在加载数据…</string>
    <string name="message_playlist_load_failed">无法读取列表数据,可能数据已损坏</string>
    <string name="message_playlist_empty_removed">列表已无数据,将自动移除</string>
    <string name="message_playlist_saved">已保存更改</string>
    <string name="dialog_button_playlist_edit">编辑播放列表</string>
    <string name="dialog_button_playlist_delete">删除播放列表</string>
    <string name="network_simple_unknown_error">应用未知异常</string>
    <string name="network_simple_args_error">不满足必须数据参数</string>
    <string name="network_simple_server_error">服务器异常</string>
    <string name="network_simple_timeout_error">请求超时</string>
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_start_login">登录账户</string>
    <string name="login_start_register">注册并登录</string>
    <string name="login_start_offline">暂不注册账户</string>
    <string name="login_remember">记住账密自动登录</string>
    <string name="login_failed">登录失败,请检查帐号密码</string>
    <string name="login_input_empty">输入不能为空</string>
    <string name="login_input_too_short">输入长度不能小于 6</string>
    <string name="login_input_only_word">用户名仅可为字母和数字</string>
    <string name="login_head_login">欢迎回来 </string>
    <string name="login_head_register">注册成啦 ! 您的用户名为:</string>
    <string name="button_song">歌曲</string>
    <string name="button_playlist">列表</string>
    <string name="button_user">用户</string>
    <string name="head_playing">当前歌曲</string>
    <string name="title_detail">列表详情</string>
    <string name="title_menu_rename">修改名字</string>
    <string name="info_playlist">长按项目进行拖动排序 , 滑动项目进行删除.</string>
    <string name="empty_playlist">哎呀! 您还没有添加播放列表噢 ~</string>
    <string name="text_playlist_name">播放列表名称</string>
    <string name="text_playlist_count">包含音频数量</string>
    <string name="text_playlist_countEND">首</string>
    <string name="text_playlist_loading">正在读取播放列表数据中 , 请稍候 . . .</string>
    <string name="text_playlist_loadFailed">播放列表数据读取失败</string>
    <string name="text_playlist_saved">播放列表数据保存成功</string>
    <string name="text_playlist_clear">播放列表无数据 , 已删除空列表</string>
    <string name="text_playlist_saveFail">播放列表数据未做更改</string>
    <string name="text_playlist_addNewSong">成功添加音频</string>
    <string name="text_playlist_addNewSong_Failed">添加音频失败 , 可能存在同名音频</string>
    <string name="text_playlist_play_Failed">音频文件无法播放,可能已经失效</string>
    <string name="text_cloudMusic_download_status_title">正在下载</string>
    <string name="text_cloudMusic_download_status_cancel">已取消下载歌曲</string>
    <string name="text_cloudMusic_download_status_done">下载完成</string>
    <string name="text_cloudMusic_download_status_failed">下载失败</string>
    <string name="text_cloudMusic_download_button_download">取回本地</string>
    <string name="text_cloudMusic_download_button_exist">已下载</string>
    <string name="text_cloudMusic_button_remove">移除歌曲</string>
    <string name="text_cloudMusic_removing">正在请求删除…</string>
    <string name="text_cloudMusic_title">我的云储存音乐</string>
    <string name="text_cloudMusic_subTitle">云端歌曲数量:</string>
    <string name="text_cloud_header_owner">所属者:</string>
    <string name="ViewPage_Tab_AllMusic">音乐库</string>
    <string name="ViewPage_Tab_Playlist">播放列表</string>
    <string name="musicFolder_name">设置扫描目录</string>
    <string name="musicFolder_noPermission">应用无权限进行扫描 , 请先授权</string>
    <string name="musicList_deleted">音频已删除</string>
    <string name="musicList_delete_failed">音频无法删除，文件无法写入</string>
    <string name="musicList_uploading">音频正在后台上传中…</string>
    <string name="musicList_upload_wait">当请等待上一个上传任务完成后再执行</string>
    <string name="textview_option">点此设置设置歌曲文件夹</string>
    <string name="wrongPlaylistName">无效名称,请重新输入</string>
    <string name="existedlaylistName">已经有相同名称的播放列表</string>
    <string name="startSelectPlaylist">请从列表中选择要添加的歌曲</string>
    <string name="playliseSaved">列表储存成功</string>
    <string name="playliseSaveFailed">列表储存失败</string>
    <string name="playliseSaveCanceled">已取消添加播放列表操作</string>
    <string name="music_failed">歌曲不存在或已损坏</string>
    <string name="title_newplaylist_dialog">请输入新建播放列表的名称</string>
    <string name="title_addPL_dialog">选择需要添加到的播放列表</string>
    <string name="header_noMusic">无正在播放曲目</string>
    <string name="error_need_online">当前为离线模式 , 无法使用此功能</string>
    <string name="title_select_folder_ui">选择要扫描的音乐文件夹</string>
    <string name="title_addDialog">在此手动输入文件夹路径</string>
    <string name="info_wrongPath">请输入正确的文件夹路径</string>
    <string name="info_existPath">请勿重复添加相同的路径</string>
    <string name="info_addedPath">路径添加成功</string>
    <string name="info_removedPath">路径移除成功</string>
    <string name="info_folder_ui">单击进入浏览文件夹 , 长按选中目标文件夹</string>
    <string name="title_action_op_ui">使用浏览器添加</string>
    <string name="info_recycle_title">以下是已添加条目 (扫描时不包含子目录) \n长按指定条目可以移除扫描路径</string>
    <string name="info_noPrevious">没有更上一级的目录了哟 :)</string>
    <string name="info_folder_count">当前已选择文件夹数: </string>
    <string name="info_confirm">您当前已有选择的目录 , 确认不保存直接返回吗 ?</string>
    <string name="noResult_Preview">无法搜索到相应的封面</string>
    <string name="noResult_Detail">无法得到封面详情数据,请检查是否网络异常</string>
    <string name="progress_loading">正在获取搜索结果页面信息</string>
    <string name="progress_decode">正在解析页面数据</string>
    <string name="recover">撤销自定义封面</string>
    <string name="recover_successful">已还原旧封面数据</string>
    <string name="recover_failed">尚未设置新的封面数据,不需要还原</string>
    <string name="coverbox_info">所有搜索结果均解析自   coverbox.sinaapp.com \n\nCoverBox is created by Henry Hu\nE-mail: henry@henryhu.cn</string>
    <string name="cover_info">1.搜索结果为低分辨率预览图像,点击对应的封面预览即可下载高分辨率尺寸.\n\n2.请勿频繁重复请求同一歌曲,否则会在一定时间内无法得到结果.</string>
    <string name="head_result">搜索结果数量:</string>
    <string name="head_searchText">搜索依据:</string>
    <string name="menu_title_cover_info">数据来源</string>
    <string name="title_selector_dialog">请选择需要下载的封面尺寸</string>
    <string name="logout">重新登陆</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_menu_sort_date">按照歌曲添加日期</string>
    <string name="title_menu_sort_name">按照歌曲标题名字</string>
    <string-array name="sort_types_name">
        <item>@string/title_menu_sort_name</item>
        <item>@string/title_menu_sort_date</item>
    </string-array>
    <string name="setting_header_general">基本设置</string>
    <string name="setting_header_spectrum">频谱动画设置</string>
    <string name="setting_header_scan">扫描器选项</string>
    <string name="setting_title_lengthLimit">最短歌曲长度(单位:秒)</string>
    <string name="setting_defaultValue_lengthLimit">20</string>
    <string name="setting_header_media">音频控制选项</string>
    <string name="setting_title_isListenMediaButton">监听耳机按钮</string>
    <string name="setting_info_isListenMediaButton">响应耳机按钮对应的操作: \n1次-暂停/播放 2次-下一首  3次-上一首</string>
    <string name="setting_title_isResumeAudioWhenPlugin">监听耳机插入/连接</string>
    <string name="setting_info_isResumeAudioWhenPlugin">在耳机重新插入/连接上的时候继续播放上次被暂停的音频</string>
    <string name="setting_title_spectrum_style">频谱动画样式</string>
    <string name="setting_info_color_warnning">请勿使用接近或是完全的白色，以免在部分节目无法得到满意的效果</string>
    <string name="setting_title_lineColor">定义柱状线颜色</string>
    <string name="setting_title_outlineColor">定义外边轮廓颜色</string>
    <string name="setting_title_nodeColor">定义Node颜色</string>
    <string name="setting_title_radio">频谱扩展程度</string>
    <string name="setting_info_radio">数值越大，频谱展现越夸张</string>
    <string name="setting_title_count">频谱物件数量</string>
    <string name="setting_info_count">数量：4～100，数量越多越消耗性能</string>
    <string name="setting_title_lineShow">是否显示柱状线</string>
    <string name="setting_title_outlineShow">是否显示外边轮廓</string>
    <string name="setting_title_nodeShow">是否显示Node</string>
    <string name="setting_title_lineWidth">定义柱状线宽度</string>
    <string name="setting_title_outlineWidth">定义外边轮廓宽度</string>
    <string name="setting_title_nodeWidth">定义Node半径</string>
    <string name="setting_info_line">频谱柱状线设置</string>
    <string name="setting_info_outline">频谱外边轮廓设置</string>
    <string name="setting_info_node">频谱Node设置</string>
    <string name="setting_title_theme_reset">恢复默认主题配置</string>
    <string name="setting_title_color_StatusBar">状态栏 颜色</string>
    <string name="setting_info_color_StatusBar">需要Android 5.0+系统支持</string>
    <string name="setting_title_color_NevBar">导航栏 颜色</string>
    <string name="setting_info_color_NevBar">需要Android 5.0+系统支持</string>
    <string name="setting_title_color_TabLayout">主界面标签栏 颜色</string>
    <string name="setting_title_color_TabLayoutText">主界面标签栏文字 未选中状态 颜色</string>
    <string name="setting_title_color_TabLayoutText_selected">主界面标签栏文字 选中状态 颜色</string>
    <string name="setting_title_color_TabLayout_Indicator">主界面标签栏游标 颜色</string>
    <string name="setting_title_color_Toolbar">ToolBar 颜色</string>
    <string name="setting_title_color_ToolbarText">ToolBar 标题文字颜色</string>
    <string name="setting_title_color_ToolbarSubtitleText">ToolBar 副标题文字颜色</string>
    <string name="setting_title_color_DefaultCoverColor">默认封面混合颜色</string>
    <string name="setting_title_color_window_bg">主界面背景颜色</string>
</resources>