<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/setting_spectrum_styles"
        android:entryValues="@array/setting_spectrum_style_values"
        android:key="spectrum_style"
        android:title="@string/setting_title_spectrum_style" />

    <EditTextPreference
        android:defaultValue="70"
        android:inputType="numberDecimal"
        android:key="spectrumCounts"
        android:summary="@string/setting_info_count"
        android:title="@string/setting_title_count" />

    <EditTextPreference
        android:defaultValue="100"
        android:inputType="numberDecimal"
        android:key="spectrumRadio"
        android:summary="@string/setting_info_radio"
        android:title="@string/setting_title_radio" />

    <PreferenceCategory
        android:layout="@layout/preference_sp_outline_category_textview_warnning"
        android:title="@string/setting_info_outline" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="isSpectrumShowOutLine"
        android:title="@string/setting_title_outlineShow"
        android:widgetLayout="@layout/preference_checkbox" />

    <com.rarepebble.colorpicker.ColorPreference
        android:defaultValue="0xFF9308e4"
        android:key="Spectrum_OutLine_Color"
        android:title="@string/setting_title_outlineColor"
        app:colorpicker_showAlpha="false" />

    <EditTextPreference
        android:defaultValue="10"
        android:inputType="numberDecimal"
        android:key="spectrumOutlineWidth"
        android:title="@string/setting_title_outlineWidth" />

    <PreferenceCategory
        android:layout="@layout/preference_sp_node_category_textview_warnning"
        android:title="@string/setting_info_node" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="isSpectrumShowNode"
        android:title="@string/setting_title_nodeShow"
        android:widgetLayout="@layout/preference_checkbox" />

    <com.rarepebble.colorpicker.ColorPreference
        android:defaultValue="0xFF9308e4"
        android:key="Spectrum_Node_Color"
        android:title="@string/setting_title_nodeColor"
        app:colorpicker_showAlpha="false" />

    <EditTextPreference
        android:defaultValue="5"
        android:inputType="numberDecimal"
        android:key="spectrumNodeWidth"
        android:title="@string/setting_title_nodeWidth" />

    <PreferenceCategory
        android:layout="@layout/preference_sp_line_category_textview_warnning"
        android:title="@string/setting_info_line" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="isSpectrumShowLine"
        android:title="@string/setting_title_lineShow"
        android:widgetLayout="@layout/preference_checkbox" />

    <com.rarepebble.colorpicker.ColorPreference
        android:defaultValue="0xFFFFFFFF"
        android:key="Spectrum_Line_Color"
        android:title="@string/setting_title_lineColor"
        app:colorpicker_showAlpha="false" />

    <EditTextPreference
        android:defaultValue="15"
        android:inputType="numberDecimal"
        android:key="spectrum_line_width"
        android:title="@string/setting_title_lineWidth" />

</PreferenceScreen>