<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:layoutAnimation="@anim/layout_anim_equalizer"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/app_name"
        android:textColor="@color/pureWhite"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Made by OCWVAR"
        android:textColor="@color/pureWhite"
        android:textSize="13sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/DefaultCoverColor"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="8dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Text_LightGray"
                android:theme="@style/inputStyle">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_username"
                    android:inputType="text"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/Text_LightGray"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Text_LightGray"
                android:theme="@style/inputStyle">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_password"
                    android:inputType="numberPassword"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/Text_LightGray"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/login_remember"
                android:textColor="@color/Text_LightGray"
                app:buttonTint="@color/blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/login_start_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/orange_drawable_bg"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/login_start_login"
                    android:textColor="@color/pureWhite" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/login_start_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/blue_drawable_bg"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/login_start_register"
                    android:textColor="@color/pureWhite" />

            </LinearLayout>

            <TextView
                android:id="@+id/login_start_offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/login_start_offline"
                android:textColor="#6e6d6d" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>