<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="start"
    android:layoutAnimation="@anim/layout_anim_equalizer"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu_music_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_action_add"
        android:foreground="?android:selectableItemBackground"
        android:padding="10dp"
        android:text="@string/dialog_button_create"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/menu_music_add2playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_action_playlist_add"
        android:foreground="?android:selectableItemBackground"
        android:padding="10dp"
        android:text="@string/dialog_button_add2"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/menu_music_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_action_delete"
        android:foreground="?android:selectableItemBackground"
        android:padding="10dp"
        android:text="@string/dialog_button_delete"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/menu_music_cover_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_action_online_cover"
        android:foreground="?android:selectableItemBackground"
        android:padding="10dp"
        android:text="@string/dialog_button_cover_remove"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/menu_music_online_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_action_online_cover"
        android:foreground="?android:selectableItemBackground"
        android:padding="10dp"
        android:text="@string/dialog_button_cover"
        android:textColor="#fff" />

</LinearLayout>