<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_allmusic_more"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_dialog_allmusic_delete"
            android:id="@+id/textView11"
            android:textColor="#fff" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fb_delete"
            android:src="@drawable/ic_action_playlist_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="normal"
            app:fab_colorNormal="#ab1b0f"
            app:fab_colorPressed="@color/card_backgroundColor_Dark"
            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fb_download_cover"
            android:src="@drawable/ic_action_download_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="normal"
            app:fab_colorNormal="#009de6"
            app:fab_colorPressed="@color/card_backgroundColor_Dark"
            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fb_add"
            android:src="@drawable/ic_action_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="normal"
            app:fab_colorPressed="@color/card_backgroundColor_Dark"
            app:fab_colorNormal="#9636ca"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_dialog_allmusic_add"
            android:id="@+id/textView10"
            android:textColor="#fff" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dialog_allmusic_cover"
        android:id="@+id/textView4"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

</LinearLayout>